part1/e1.11/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: shared
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
